<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_background"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/Title2"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Email"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/EmailHint"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="#939393"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NameEditText" />

    <EditText
        android:id="@+id/NameEditText"
        style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="66dp"
        android:ems="10"
        android:hint="@string/NameHint"
        android:inputType="textPersonName"
        android:textColorHint="#939393"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/PasswordEditText"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/PasswordHint"
        android:textColorHint="#939393"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Email" />
</androidx.constraintlayout.widget.ConstraintLayout>