<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_background"
    tools:context=".SignInActivity">


    <TextView
        android:id="@+id/Title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/LoginTitle"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/EmailID"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="66dp"
        android:autofillHints="Email"
        android:cursorVisible="true"
        android:ems="10"
        android:hint="@string/EmailHint"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:outlineProvider="paddedBounds"
        android:textColor="@color/black"
        android:textColorHint="#939393"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title1" />

    <EditText
        android:id="@+id/TextPassword"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:autofillHints="Pass"
        android:ems="10"
        android:hint="@string/PasswordHint"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="#939393"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EmailID" />

    <Button
        android:id="@+id/LoginButton"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#1F8DE4"
        android:text="@string/LoginBtn"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextPassword" />
</androidx.constraintlayout.widget.ConstraintLayout>